--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@
 
 body{
   background-color: var(--body-color);
+  overflow: hidden;
 }
 
 .contenedor-categorias{
@@ -174,3 +175,94 @@ body{
   gap: 1rem;
 }
 
+.contenedor-carrito #close{
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+}
+
+.contenedor-carrito{
+  background-color: var(--container-color);
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: var(--text-color);
+  width: 100%;
+  height: 100%;
+  max-width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 1rem;
+  z-index: 100;
+  box-shadow: 0 0 15px 0;
+  animation: cart-move 1.5s;
+}
+
+@keyframes cart-move{
+  0%{
+      right: -400px;
+  }
+  100%{
+      right: 0;
+  }
+}
+
+.contenedor-carrito h2{
+  text-align: center;
+}
+.contenedor-carrito p{
+  text-align: justify;
+  font-size: 14px;
+}
+.img-empty-cart{
+  width: 100%;
+}
+
+.carrito-2{
+  
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.items-precio{
+  color: var(--text-color);
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-checkout{
+  background-color: --card-colorblue;
+  align-self: flex-end;
+  padding: 1rem;
+  border: none;
+  border-radius: 2px;
+  color: var(--text-color-light);
+}
+
+@media screen and (min-width: 768px) {
+  .footer{
+    justify-content: center;
+    gap: 3rem;
+
+  }
+  .contenedor-footer{
+    width: 12rem;
+  }
+
+  .contenedor-carrito{
+    justify-content: start;
+    gap: 1rem;
+  }
+
+  .carrito-2{
+    margin-top: 3rem;
+  }
+}
+
+.hidden{
+  display: flex;
+}
