--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,21 @@ html{
   --body-font: 'Roboto', sans-serif;
 }
 
+/*=============== THEME ===============*/
+/*========== Variables Dark theme ==========*/
+/*
+    --first-color: hsl(182, 53%, 74%);
+    --button-color: hsl(246, 16%, 12%);
+    --button-color-alt: hsl(0, 0%, 28%);
+    --card-color: hsla(246, 16%, 5%, .5);
+    --title-color: hsl(0, 0%, 95%);
+    --text-color: hsl(0, 0%, 75%);
+    --body-color: hsl(249, 19%, 14%);
+    --container-color: hsl(246, 16%, 12%);
+    --border-color: hsl(0, 0%, 20%);
+*/
+
+
 /* ---------- ESTRUCTURA PRINCIPAL GRID ----------- */
 
 body{
@@ -318,17 +333,228 @@ body{
   }
 
 
-/*=============== THEME ===============*/
-/*========== Variables Dark theme ==========*/
-/*
-    --first-color: hsl(182, 53%, 74%);
-    --button-color: hsl(246, 16%, 12%);
-    --button-color-alt: hsl(0, 0%, 28%);
-    --card-color: hsla(246, 16%, 5%, .5);
-    --title-color: hsl(0, 0%, 95%);
-    --text-color: hsl(0, 0%, 75%);
-    --body-color: hsl(249, 19%, 14%);
-    --container-color: hsl(246, 16%, 12%);
-    --border-color: hsl(0, 0%, 20%);
-*/
+  .contenedor-categorias{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    flex-wrap: wrap ;
+    gap: 1rem;
+    margin: 3rem 0;
+  }
+  
+  
+  .btn{
+    background-color: blue;
+    width: 7rem;
+    height: 2.5rem;
+    border: none;
+    background-color: var(--body-color);
+  }
+  .btn h2{
+    font-size: 16px;
+    color: var(--title-color);
+  }
+  .btn p{
+    font-size: 12px;
+    color: var(--text-color);
+  }
+  
+  .separador-btn{
+    background-color: var(--title-color);
+    width: 1px;
+    height: 2.5rem;
+    margin: 0 0.1rem;
+  }
+  
+  .contenedor-productos{
+    background-color: var(--body-color);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-bottom: 3rem;
+    gap: 3rem;
+    
+  }
+  
+  .tarjeta-producto{
+    background-color: var(--card-color);
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    gap: 0.5rem;
+    border-radius: 10px;
+  }
+  .img-producto{
+    width: 200px;
+  }
+  
+  .contenedor-detalle{
+    background-color: var(--container-color);
+    width: 100%;
+    padding: 1rem 0 1rem 1rem ;
+    position: relative;
+  }
+  
+  .btn-agrega{
+    position: absolute;
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: -1rem;
+    right: 1rem;
+    border: none;
+    box-shadow: 0 0 15px 0;
+    
+  }
+  
+  .precio-stock{
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+  }
+  
+  .precio-stock p{
+    border-left: 1px solid;
+    padding-left: 0.5rem;
+  }
+  
+  .footer{
+    background-color: var(--card-color);
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    flex-wrap: wrap;
+    padding: 6rem 0 3rem 3rem;
+  }
+  
+  .contenedor-footer{
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    gap: 0.5rem;
+    padding-bottom: 1rem;
+    color: var(--text-color);
+  }
+  
+  .contenedor-footer h2{
+    font-size: 22px;
+  }
+  .contenedor-footer a{
+    text-decoration: none;
+    color: var(--text-color);
+  }
+  
+  .iconos-social{
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    gap: 1rem;
+  }
+  
+  
+  .contenedor-carrito #close{
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+  }
+  
+  .contenedor-carrito{
+    background-color: var(--container-color);
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--text-color);
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 2rem 1rem;
+    z-index: 100;
+    box-shadow: 0 0 15px 0;
+    animation: cart-move 1.5s;
+  }
+  
+  @keyframes cart-move{
+    0%{
+        right: -400px;
+    }
+    100%{
+        right: 0;
+    }
+  }
+  
+  .contenedor-carrito h2{
+    text-align: center;
+  }
+  .contenedor-carrito p{
+    text-align: justify;
+    font-size: 14px;
+  }
+  .img-empty-cart{
+    width: 100%;
+  }
+  
+  .carrito-2{
+    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  
+  .items-precio{
+    color: var(--text-color);
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .btn-checkout{
+    background-color: --card-colorblue;
+    align-self: flex-end;
+    padding: 1rem;
+    border: none;
+    border-radius: 2px;
+    color: var(--text-color-light);
+  }
+  
+  @media screen and (min-width: 768px) {
+    .footer{
+      justify-content: center;
+      gap: 3rem;
+  
+    }
+    .contenedor-footer{
+      width: 12rem;
+    }
+  
+    .contenedor-carrito{
+      justify-content: start;
+      gap: 1rem;
+    }
+  
+    .carrito-2{
+      margin-top: 3rem;
+    }
+  }
+  
+  .hidden{
+    display: none;
+  }
+  
+
   
